--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,21 @@
 .jumbotron {
-  background-color: yellow;
-  color: black;
+  background-color: cadetblue;
+  color: white;
 }
 
 .footer {
   padding: 10px 10px 0 10px;
-  background-color: blue;
+  background-color: cadetblue;
   margin-bottom: 0px;
   margin-top: 10px;
 }
 
-.card-hotel{
-          flex: 1 150px;
-          padding: 2px 5px 2px 5px;
-          margin-top: 10px;
+.card-hotel {
+  flex: 1 150px;
+  padding: 2px 5px 2px 5px;
+  margin-top: 10px;
 }
 
-.btn-reserva{
-          width: 100%;
+.btn-reserva {
+  width: 100%;
 }
