--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,26 @@
 .jumbotron {
-  background-color: cadetblue;
-  color: white;
+  max-height: 300px;
+  max-height: 300px;
+  color: black;
   margin-top: 50px;
+  
 }
 
 footer {
   padding: 10px 10px 0 10px;
-  background-color: cadetblue;
+  background-color: gainsboro;
   margin-bottom: 0px;
   margin-top: 10px;
 }
 
 .card-hotel {
-  flex: 1 150px;
-  padding: 2px 5px 2px 5px;
+  flex: 1 200px;
   margin-top: 10px;
 }
 
 .btn-reserva {
   width: 100%;
+  border-radius: 0px;
 }
 .footer-address-icon{
   padding-right: 10px;
