proyecto final semana 4

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,7 @@
+$yellow: #feffc2;
+$green: #bbf2be;
+$red: #870c03;
+
 @mixin margenes ($top,$bottom){
           margin-top: $top;
           margin-bottom: $bottom;
